--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,16 +1,35 @@
-# Read the Docs 配置文件版本（必填，当前固定为 2）
-version: 2
-sphinx:
-  # Path to your Sphinx configuration file.
-  configuration: docs/conf.py
-# ------------------------------
-# 1. 构建环境配置（核心：指定 macOS 系统）
-# ------------------------------
-build:
-  # 操作系统：明确指定为 macOS（可选值：ubuntu-22.04, macos-12, windows-2022）
-  os: ubuntu-22.04
-  # 构建工具：默认使用 "sphinx"（文档生成工具，若用 MkDocs 需改为 "mkdocs"）
-  tools:
-    # Python 版本：指定项目使用的 Python 版本（macOS 预装 Python，但建议显式指定避免兼容问题）
-    python: "3.11"
+# Read the Docs configuration file for Sphinx projects
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
+# Required
+version: 2
+
+# Set the OS, Python version and other tools you might need
+build:
+  os: ubuntu-24.04
+  tools:
+    python: "3.12"
+    # You can also specify other tool versions:
+    # nodejs: "20"
+    # rust: "1.70"
+    # golang: "1.20"
+
+# Build documentation in the "docs/" directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
+  # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
+  # builder: "dirhtml"
+  # Fail on all warnings to avoid broken references
+  # fail_on_warning: true
+
+# Optionally build your docs in additional formats such as PDF and ePub
+# formats:
+#   - pdf
+#   - epub
+
+# Optional but recommended, declare the Python requirements required
+# to build your documentation
+# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# python:
+#   install:
+#     - requirements: docs/requirements.txt
